proxypad: Hold a reference to the internal pad while pushing through it

https://bugzilla.gnome.org/show_bug.cgi?id=684809